# Discord-Bot

./: .gitignore  LICENSE  README.md  champDict.json  masteryDict.json  pyproject.toml  rankDict.json
data/: champDict.json
my_bot/: config.py  logs.py  main.py
my_bot/extensions/: fun.py  help.py  login.py  logout.py  lol.py  lolinfo.py  lolrota.py  misc.py  moderation.py  owner.py  patchnotes.py  status.py  welcome.py
scripts/: Run.ps1  run.bash
